--- a/src/utils/style/sass/utils/_mixins.scss
+++ b/src/utils/style/sass/utils/_mixins.scss
@@ -26,4 +26,9 @@
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    width: 89%;
+
+    @include desktop-only {
+        width: 86%
+    }
 }
