--- a/src/utils/style/sass/main.scss
+++ b/src/utils/style/sass/main.scss
@@ -16,12 +16,12 @@
 // @import '../../../components/error/error';
 // @import '../../../components/tag/tag';
 // @import '../../../components/gallery/gallery';
-// @import '../../../components/banner/banner';
+@import '../../../components/banner/banner';
 
 
 
 // //Pages
-// @import '../../../pages/home/home';
+@import '../../../pages/home/home';
 // @import '../../../pages/about/about';
 // @import '../../../pages/lodging/lodging';
 
