--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -5,15 +5,15 @@
     align-items: center;
 
     &__wrapper {
-        padding-top: 65px;
-        padding-bottom: 60px;
+        margin-top: 65px;
+        margin-bottom: 60px;
         display: flex;
         flex-direction: column;
         gap: 20px;
 
         @include desktop-only {
             gap: 30px;
-            padding-bottom: 30px;
+            margin-bottom: 30px;
         }
 
         &__logo {
