--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -1,11 +1,41 @@
 .home {
+    flex: 1;
+    margin-top: 25px;
     @include center-box;
+
+    @include desktop-only {
+        margin-top: 50px;
+    }
 
     &__container {
         display: flex;
         flex-direction: column;
         flex: 1;
-        gap: 20px
+        gap: 20px;
+        margin-bottom: 25px;
+
+        @include desktop-only {
+            margin-top: 50px;
+            margin-bottom: 45PX;
+            gap: 40px;
+        }
+
+        &__cards-wrapper {
+            display: flex;
+            flex-direction: column;
+            padding: 0;
+            gap: 20px;
+
+            @include desktop-only {
+                background-color: $clr-bgLight;
+                border-radius: 25px;
+                padding: 55px 50px 55px 50px;
+                column-gap: 60px;
+                row-gap: 50px;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
     }
 
 
