--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -1,5 +1,5 @@
 .dropdown {
-    &__container {
+    &__body {
         border-bottom-left-radius: 11px;
         border-bottom-right-radius: 11px;
         border-top-right-radius: 0;
@@ -9,26 +9,109 @@
         max-height: 0;
         flex: 1;
         opacity: 0;
-        background-color: white;
-        transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+        background-color: #F6F6F673;
+        padding: 15px 20px 20px 20px;
+        transition: all 0.2s cubic-bezier(0, 1, 0, 1);
         overflow: hidden;
+        display: none;
 
         &--open {
-            transition: all 0.5s ease-in-out;
+            transition: all 0.2s ease-in-out;
             opacity: 1;
-            max-height: 260px;
+            max-height: 500px;
             overflow: auto;
-            gap: 25px;
+            display: flex;
+
+            @include desktop-only {
+                padding: 20px;
+
+            }
+        }
+
+        &__sentence {
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 17.11px;
+            margin: 0;
+
+            @include desktop-only {
+                font-size: 18px;
+                line-height: 25.67px;
+            }
+
+        }
+
+        &__list {
+            padding-left: 0;
+            margin: 0;
+
+            &__item {
+                font-size: 12px;
+                font-weight: 400;
+                line-height: 17.11px;
+                list-style-type: none;
+
+                @include desktop-only {
+                    font-size: 18px;
+                    line-height: 25.67px;
+                }
+            }
         }
     }
 
     &__head {
+        display: flex;
+        justify-content: space-between;
+
+        &__title {
+            font-size: 13px;
+            font-weight: 700;
+            line-height: 18.54px;
+            color: #fff;
+
+            @include desktop-only {
+                font-size: 24px;
+                line-height: 34.22px;
+
+            }
+        }
+
         &__icon {
-            background-image: url("../../assets/icons/arrow.svg");
+            background-image: url("../../assets/icons/arrow-s.svg");
             background-repeat: no-repeat;
             background-position: center;
-            width: 14px;
-            height: 7px;
+            width: 17px;
+            height: 10px;
+            transition: transform 0.2s ease-in-out;
+
+            @include desktop-only {
+                background-image: url("../../assets/icons/arrow.svg");
+                width: 25px;
+                height: 14px;
+            }
+
+            &--open {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    & button {
+        display: flex;
+        flex-direction: row;
+        gap: 63px;
+        background-color: $clr-primary;
+        align-items: center;
+        border-width: 0;
+        border-radius: 11px;
+        padding: 10px;
+        font-weight: 500;
+        font-size: 16px;
+        cursor: pointer;
+        width: 100%;
+
+        @include desktop-only {
+            padding: 10px 15px;
         }
     }
 }
