--- a/src/pages/about/_about.scss
+++ b/src/pages/about/_about.scss
@@ -6,9 +6,17 @@
     gap: 20px;
     @include center-box;
 
+    & .dropdown {
+        margin-bottom: 20px;
+
+        @include desktop-only {
+            margin-bottom: 40px;
+        }
+    }
+
     @include desktop-only {
         margin-top: 40px;
-        padding-bottom: 40px;
+        // padding-bottom: 40px;
         gap: 40px;
     }
 
@@ -17,7 +25,7 @@
         flex-direction: column;
         align-items: center;
         flex: 1;
-        gap: 20px;
+        // gap: 20px;
 
         @include desktop-only {
             width: 83%;
@@ -26,18 +34,5 @@
         }
     }
 
-    & button {
-        display: flex;
-        flex-direction: row;
-        gap: 63px;
-        background-color: $clr-primary;
-        align-items: center;
-        border-width: 0;
-        border-radius: 11px;
-        padding: 17px 16px;
-        font-weight: 500;
-        font-size: 16px;
-        cursor: pointer;
-        width: 100%;
-    }
+
 }
