--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -29,7 +29,7 @@
             @include desktop-only {
                 background-color: $clr-bgLight;
                 border-radius: 25px;
-                padding: 55px 50px 55px 50px;
+                padding: 55px 50px;
                 column-gap: 60px;
                 row-gap: 50px;
                 display: grid;
