correctifs css mineurs

--- a/src/components/gallery/_gallery.scss
+++ b/src/components/gallery/_gallery.scss
@@ -4,6 +4,7 @@
     aspect-ratio: 1.39;
     overflow: hidden;
     border-radius: 10px;
+    user-select: none;
 
     @include desktop-only {
         aspect-ratio: 1.93;
