--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -1,24 +1,28 @@
 .dropdown {
     width: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: #F6F6F673;
+
+    &--open {
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+
 
     &__body {
-        border-bottom-left-radius: 11px;
-        border-bottom-right-radius: 11px;
-        border-top-right-radius: 0;
-        border-top-left-radius: 0;
         display: flex;
         flex-direction: column;
         max-height: 0;
         flex: 1;
         opacity: 0;
-        background-color: #F6F6F673;
-        padding: 15px 20px 20px 20px;
-        transition: all 0.2s cubic-bezier(0, 1, 0, 1);
+        transition: all 0.3s cubic-bezier(0, 1, 0, 1);
         overflow: hidden;
-        display: none;
 
         &--open {
-            transition: all 0.2s ease-in-out;
+            display: flex;
+            transition: all 0.3s ease-in-out;
+            transform: translateY(0);
             opacity: 1;
             max-height: 500px;
             overflow: auto;
@@ -30,11 +34,14 @@
             }
         }
 
+
         &__sentence {
+
+            margin: 15px 20px 20px 20px;
             font-size: 12px;
             font-weight: 400;
             line-height: 17.11px;
-            margin: 0;
+
 
             @include desktop-only {
                 font-size: 18px;
@@ -44,8 +51,9 @@
         }
 
         &__list {
+
+            margin: 15px 20px 20px 20px;
             padding-left: 0;
-            margin: 0;
 
             &__item {
                 font-size: 12px;
@@ -69,7 +77,7 @@
         background-color: $clr-primary;
         align-items: center;
         border-width: 0;
-        border-radius: 11px;
+        border-radius: 5px;
         padding: 10px;
         font-weight: 500;
         font-size: 16px;
@@ -98,8 +106,9 @@
             background-position: center;
             width: 17px;
             height: 10px;
-            transition: transform 0.2s ease-in-out;
+            transition: transform 0.3s ease-in-out;
             cursor: pointer;
+            user-select: none;
 
             @include desktop-only {
                 background-image: url("../../assets/icons/arrow.svg");
