--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -9,7 +9,6 @@
         border-bottom-right-radius: 10px;
     }
 
-
     &__body {
         display: flex;
         flex-direction: column;
@@ -18,8 +17,10 @@
         opacity: 0;
         transition: all 0.3s cubic-bezier(0, 1, 0, 1);
         overflow: hidden;
+        transform: translateY(-20px);
 
         &--open {
+            transform: translateY(0);
             display: flex;
             transition: all 0.3s ease-in-out;
             transform: translateY(0);
@@ -30,18 +31,14 @@
 
             @include desktop-only {
                 padding: 20px;
-
             }
         }
 
-
         &__sentence {
-
             margin: 15px 20px 20px 20px;
             font-size: 12px;
             font-weight: 400;
             line-height: 17.11px;
-
 
             @include desktop-only {
                 font-size: 18px;
@@ -51,7 +48,6 @@
         }
 
         &__list {
-
             margin: 15px 20px 20px 20px;
             padding-left: 0;
 
