--- a/src/pages/error/_error.scss
+++ b/src/pages/error/_error.scss
@@ -33,6 +33,8 @@
         font-weight: 500;
         line-height: 25.67px;
         color: $clr-primary;
+        text-align: center;
+        max-width: 75%;
 
         @include desktop-only {
             font-size: 36px;
