--- a/src/pages/lodging/_lodging.scss
+++ b/src/pages/lodging/_lodging.scss
@@ -152,7 +152,7 @@
 
             &__rating-wrapper {
                 display: flex;
-                flex-direction: row-reverse;
+                flex-direction: row;
                 column-gap: 5px;
                 padding-left: 2px;
 
